--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,7 @@ ul {
 }
 
 .yet-area {
+  min-height: 100px;
   width: 80%;
   margin: auto;
   padding: 20px;
@@ -87,6 +88,7 @@ ul {
 }
 
 .doing-area {
+  min-height: 100px;
   width: 80%;
   margin: auto;
   padding: 20px;
@@ -102,6 +104,7 @@ ul {
 }
 
 .done-area {
+  min-height: 100px;
   width: 80%;
   margin: auto;
   padding: 20px;
